feat: create context folder to appropriately use context and hooks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
   ],
   "compilerOptions": {
     "moduleResolution": "node16",
+    "module": "Node16",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"]
     },
   }
 }
