--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,16 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "jsx": "react-jsx",
     "moduleResolution": "node16",
     "module": "Node16",
     "baseUrl": ".",
+    "noImplicitAny": false,
+    "noUnusedParameters": false,
+    "skipLibCheck": true,
+    "allowJs": true,
+    "noUnusedLocals": false,
+    "strictNullChecks": false,
     "paths": {
       "@/*": ["src/*"]
     },
