chore: update docker and api base url

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,1 @@
-VITE_API_KEY=a5617e2a
-VITE_API_BASE_URL=https://api.hgbrasil.com
+VITE_API_URL=https://price-tracking-api-docker-293372619781.us-central1.run.app
